# prompts

./: .gitignore  README.md  docker-compose.yaml  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: prompt-proposal.md
backend/: .flake8  Dockerfile  README.md  init_db.py  main.py  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 6bf01e4a11c1_add_prompt_model.py
backend/api/: deps.py
backend/api/v1/: api.py  prompts.py
backend/core/: __init__.py  settings.py
backend/crud/: __init__.py  prompts.py
backend/models/: __init__.py  prompt.py
backend/schemas/: prompts.py
frontend/: .env.example  Dockerfile  README.md  package-lock.json  package.json  vue.config.js
frontend/src/: App.vue  settings.js
frontend/src/assets/styles/parts/central/: base.css  message.css  template.css  title.css
frontend/src/assets/styles/parts/left/: base.css
frontend/src/assets/styles/parts/right/: base.css
frontend/src/components/: CopyPromptButton.vue  PromptDescripton.vue  PromptExample.vue  PromptTemplate.vue  PromptsList.vue
src/: App.vue  main.js  settings.js
src/assets/: styles.css
src/assets/styles/: base.css
src/assets/styles/parts/central/: example.css  template.css
src/assets/styles/parts/right/: base.css
src/components/: AuthButton.vue  CopyPromptButton.vue  PromptDescripton.vue  PromptExample.vue  PromptListItem.vue  PromptPlayground.vue  PromptTemplate.vue  PromptsList.vue
